@@ -21,7 +21,8 @@
   - Keybinding =C-c l d= calls ~M-x eglot-shutdown~.
   - =rust-mode-map= keybinding =C-c C-d= to =C-c t d=.
   - Improve =web-mode= usability.
-  - Improve e-mail sending (=SMTP=) setup description.
+  - Improve description of emails sending via =SMTP= server.
+  - Improve description of emails retrieval from =IMAP= server with =Rmail=.
 
 *** Removed:
   - Do not enable =display-time-mode=.
